--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
       - name: Copy HTML files to public folder for deployment
         run: |
           mkdir -p public
           find . -maxdepth 1 -name '*.html' -exec cp {} public/ \;
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
-        
+        with: 
+          folder: public
