Update .gitignore and fix broken links in Topic-1-Statistical-Studies and Topic-2-Graphical-Descriptions

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ Xaringan/
 .R
 .Rhistory
 .Rproj
-BaysideHousePrice.csv
-Figures/
-Data-Frames-SUNY-Concepts-in-Statistics/
+# BaysideHousePrice.csv
+# Figures/
+# Data-Frames-SUNY-Concepts-in-Statistics/
 Assets/
 .Rproj.user/
 Topic*.md
